# ChangeLog for x11-libs/qt-script
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-script/ChangeLog,v 1.24 2009/02/18 19:44:08 jer Exp $

  18 Feb 2009; Jeroen Roovers <jer@gentoo.org> qt-script-4.4.2.ebuild:
  Stable for HPPA (bug #248083).

  14 Feb 2009; Markos Chandras <hwoarang@gentoo.org>
  -qt-script-4.5.0_rc1-r1.ebuild:
  Dropping ebuild, fixes #258961

*qt-script-4.5.0_rc1-r1 (14 Feb 2009)

  14 Feb 2009; Markos Chandras <hwoarang@gentoo.org>
  +qt-script-4.5.0_rc1-r1.ebuild:
  Added scripttools target, PDEPEND on qt-gui

*qt-script-4.5.0_rc1 (11 Feb 2009)

  11 Feb 2009; Ben de Groot <yngwin@gentoo.org> +qt-script-4.5.0_rc1.ebuild:
  Version bump

  06 Feb 2009; Raúl Porcel <armin76@gentoo.org> qt-script-4.4.2.ebuild:
  ia64/sparc stable wrt #248038

  04 Feb 2009; Brent Baude <ranger@gentoo.org> qt-script-4.4.2.ebuild:
  Marking qt-script-4.4.2 ppc64 stable for bug 248038

  04 Feb 2009; Alexey Shvetsov <alexxy@gentoo.org> qt-script-4.4.2.ebuild:
  Add ~mips keywords to qt-4.4.2

  31 Jan 2009; Tobias Klausmann <klausman@gentoo.org>
  qt-script-4.4.2.ebuild:
  Stable on alpha, bug #248038

  29 Jan 2009; Alexis Ballier <aballier@gentoo.org> qt-script-4.4.2.ebuild:
  keyword ~x86-fbsd

  18 Jan 2009; Markus Meier <maekke@gentoo.org> qt-script-4.4.2.ebuild:
  amd64/x86 stable, bug #248038

  17 Jan 2009; nixnut <nixnut@gentoo.org> qt-script-4.4.2.ebuild:
  ppc stable #248038

  06 Jan 2009; Ben de Groot <yngwin@gentoo.org> -qt-script-4.4.0.ebuild,
  -qt-script-4.4.1.ebuild:
  Clean out old ebuilds

*qt-script-4.4.2 (19 Sep 2008)

  19 Sep 2008; Ben de Groot <yngwin@gentoo.org> +qt-script-4.4.2.ebuild:
  Version bump

*qt-script-4.4.1 (11 Aug 2008)

  11 Aug 2008; Ben de Groot <yngwin@gentoo.org> +qt-script-4.4.1.ebuild:
  Version bump

  13 Jun 2008; Ingmar Vanhassel <ingmar@gentoo.org> qt-script-4.4.0.ebuild:
  Make all split Qt4 ebuilds block the old monolithic ebuild.
