@@ -4,6 +4,6 @@ DIST qt-x11-opensource-src-4.4.2-headers.tar.bz2 2509611 RMD160 3424d4049f1c0695
 DIST qt-x11-opensource-src-4.4.2.tar.bz2 102816706 RMD160 5719ab5800ca181417e0dff7f961af7b371ddd97 SHA1 0bc56934565f529a2708533a4f160fbc87b9d9e0 SHA256 0530fefc452e5029877739164e133de7df5faa519b0fb3d9fcf40b467350c675
 DIST qt-x11-opensource-src-4.5.0-rc1.tar.bz2 110889586 RMD160 60b410f1776d5f55863543fcd4dd3a8105864ec1 SHA1 1dffebc52543ee8dd486ec69fc51d02e216323bd SHA256 94aa6268662a24cec1a20e2fb88fcac418101719c0e1ab2729289fd8b7d475d7
 EBUILD qt-script-4.4.2.ebuild 1200 RMD160 1cbe3587e079b91cb21e480cab2929ecf7fe3451 SHA1 ba4dadb2a75472631675ab44267c02b43cc291e7 SHA256 a0a2bf9c46a6d9fa8ab2a9d69a647982c85a1b362139b6b59783dd4387c04c69
-EBUILD qt-script-4.5.0_rc1.ebuild 1111 RMD160 cd9817ccc85dc50bdb6094537e1780716970947a SHA1 f1edc39c770453158425c8d48a37ce4ef011e75b SHA256 b118552eccc6e2e7d0a91e7910fa85b7d84d6937b401f8d7f69cc2b2c7da8aa7
-MISC ChangeLog 3247 RMD160 6e96da7c9cb141e0cf0116ae359b4d220b131865 SHA1 d432a0222fdfab9a80ccb7587a627a4eea19bf36 SHA256 fa06628715d4649b635630a0a230968bb24217acae6a9c656b2bef66773ba5df
+EBUILD qt-script-4.5.0_rc1.ebuild 1128 RMD160 93c07a118979a88aae70c516436fd56950f08013 SHA1 3adfc8d0d2797b63fd2b6366e183b948c9539221 SHA256 d396bd423ba2ec0b3d81605c5ccdd60c5fa54e7bc76f9131790e93ca6bd5cb98
+MISC ChangeLog 3375 RMD160 134dba372146bb79d58b6a3c0bb9e03d334237bd SHA1 fa214e5df97ee577248b3c6c5e90744037379a8a SHA256 0ba2368ad005b1a579a04833d1649ba5da67f2a998a0b50045c3ac68dfa28779
 MISC metadata.xml 156 RMD160 d76590850d56864c8d99e6877ed15841b55ef1fc SHA1 e872bab086832a9db3f0fa9b1897c70577d3af21 SHA256 94c4f580c1a55f8a5e1a1dcdd6dedfea0b8bd78c1d7137c354938d73c49e4448
