@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-script/qt-script-4.5.0_rc1.ebuild,v 1.1 2009/02/11 23:19:01 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-script/qt-script-4.5.0_rc1.ebuild,v 1.2 2009/02/25 09:25:47 hwoarang Exp $
 
 EAPI="prefix 2"
 inherit qt4-build
@@ -9,7 +9,7 @@ DESCRIPTION="The ECMAScript module for the Qt toolkit"
 LICENSE="|| ( GPL-3 GPL-2 )"
 SLOT="4"
 KEYWORDS="~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x86-macos"
-IUSE=""
+IUSE="+iconv"
 
 DEPEND="~x11-libs/qt-core-${PV}[debug=]"
 RDEPEND="${DEPEND}"
@@ -22,9 +22,9 @@ include/QtScript/
 src/corelib/"
 
 src_configure() {
-	myconf="${myconf} -no-xkb  -no-fontconfig -no-xrender -no-xrandr
+	myconf="${myconf} $(qt_use iconv) -no-xkb  -no-fontconfig -no-xrender -no-xrandr
 		-no-xfixes -no-xcursor -no-xinerama -no-xshape -no-sm -no-opengl
-		-no-nas-sound -no-dbus -iconv -no-cups -no-nis -no-gif -no-libpng
+		-no-nas-sound -no-dbus -no-cups -no-nis -no-gif -no-libpng
 		-no-libmng -no-libjpeg -no-openssl -system-zlib -no-webkit -no-phonon
 		-no-qt3support -no-xmlpatterns -no-freetype -no-libtiff -no-accessibility
 		-no-fontconfig -no-glib -no-opengl -no-svg -no-gtkstyle"
