@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/qt-script
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-script/ChangeLog,v 1.24 2009/02/18 19:44:08 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-script/ChangeLog,v 1.25 2009/02/25 09:25:47 hwoarang Exp $
+
+  25 Feb 2009; Markos Chandras <hwoarang@gentoo.org>
+  qt-script-4.5.0_rc1.ebuild:
+  Added iconv use flag ( bug #260145 )
 
   18 Feb 2009; Jeroen Roovers <jer@gentoo.org> qt-script-4.4.2.ebuild:
   Stable for HPPA (bug #248083).
